compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__function_argument_shadowing.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 586
expression: "pub fn main(a) {\n  Box\n}\n\npub record Box {\n  Box(Int)\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).
-export_type([box/0]).

-type box() :: {box, integer()}.

-file("/root/project/test/my/mod.rakun", 1).
-spec main(any()) -> fun((integer()) -> box()).
main(A) ->
    fun(Field@0) -> {box, Field@0} end.
