compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__function_named_module_info.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 695
expression: "\npub fn module_info() {\n    1\n}\n\npub fn main() {\n    module_info()\n}\n"
---
----- SOURCE CODE

pub fn module_info() {
    1
}

pub fn main() {
    module_info()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export(['moduleInfo'/0, main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec 'moduleInfo'() -> integer().
'moduleInfo'() ->
    1.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> integer().
main() ->
    'moduleInfo'().
