compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__inline_const_pattern_option.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 620
expression: "pub fn main() {\n            let fifteen = 15\n            let x = <<5:size(sixteen)>>\n            case x {\n              <<5:size(sixteen)>> -> <<5:size(sixteen)>>\n              <<6:size(fifteen)>> -> <<5:size(fifteen)>>\n              _ -> <<>>\n            }\n          }\n\n          pub const sixteen = 16"
---
----- SOURCE CODE
pub fn main() {
            let fifteen = 15
            let x = <<5:size(sixteen)>>
            case x {
              <<5:size(sixteen)>> -> <<5:size(sixteen)>>
              <<6:size(fifteen)>> -> <<5:size(fifteen)>>
              _ -> <<>>
            }
          }

          pub const sixteen = 16

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec main() -> bitstring().
main() ->
    Fifteen = 15,
    X = <<5:(lists:max([(16), 0]))>>,
    case X of
        <<5:16>> ->
            <<5:(lists:max([(16), 0]))>>;

        <<6:Fifteen>> ->
            <<5:(lists:max([(Fifteen), 0]))>>;

        _ ->
            <<>>
    end.
